<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miner34006.comexampleminer34006weatherapp.MainActivity"
    >

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        />

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/defaultCityValue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/defaultText"
        />

    <ImageButton
        android:id="@+id/settingsImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_settings"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toTopOf="@id/cityTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/contentDescription_settings"
        />

    <ImageButton
        android:id="@+id/expandImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_arrow_down"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toTopOf="@id/cityTextView"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/contentDescription_expand"
        />

    <TextClock
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/cityTextView"
        app:layout_constraintRight_toRightOf="@id/cityTextView"
        app:layout_constraintLeft_toLeftOf="@id/cityTextView"
        style="@style/text"
        />

    <TextView
        android:id="@+id/todayTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:includeFontPadding="false"
        android:textSize="120sp"
        android:fontFamily="@string/font_family_thin"
        android:text="@string/defaultTodayTemperatureValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/text"
        />

    <ImageView
        android:id="@+id/weatherTypeImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/weather_cloudy"
        app:layout_constraintBottom_toTopOf="@id/todayTemperature"
        app:layout_constraintLeft_toLeftOf="@id/todayTemperature"
        android:contentDescription="@string/contentDescription_weatherTypeImage"
        />

    <TextView
        android:id="@+id/weatherTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/defaultWeatherTypeValue"
        app:layout_constraintBottom_toTopOf="@id/todayTemperature"
        app:layout_constraintLeft_toRightOf="@id/weatherTypeImageView"
        style="@style/defaultText"
        />

</android.support.constraint.ConstraintLayout>
