<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miner34006.comexampleminer34006weatherapp.activities.DetailedWeatherActivity">

    <include layout="@layout/include_background_image"/>
    <include layout="@layout/include_detailed_weather_navbar"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintWithRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:background="@drawable/rectangle"
        app:layout_constraintTop_toBottomOf="@id/timeTextView"
        >

        <TextView
            android:id="@+id/forecastTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forecast"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/textTitle"
            />

        <View
            android:background="#ffffff"
            android:id="@+id/forecastLine"
            android:layout_width = "0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/forecastTextView"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/weatherDataRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/forecastLine">
        </android.support.v7.widget.RecyclerView>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/moreInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:paddingTop="10dp"
        android:background="@drawable/rectangle"
        app:layout_constraintTop_toBottomOf="@id/constraintWithRecycler"
        >

        <TextView
            android:id="@+id/detailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/textTitle"
            />

        <View
            android:id="@+id/detailedLine"
            android:background="#ffffff"
            android:layout_width = "match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/detailTextView"
            android:layout_marginTop="10dp"
            />

        <ImageView
            android:id="@+id/detailedWeatherImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/detailedLine"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/contentDescription_detailed_weather_image"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/detailRecycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/detailedLine"
            app:layout_constraintLeft_toRightOf="@id/detailedWeatherImageView"
            app:layout_constraintRight_toRightOf="parent"
            >
        </android.support.v7.widget.RecyclerView>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>